# pdfbot

./: .env.example  .gitignore  Dockerfile  README.md  build_and_publish.sh  docker-compose.yml  main.py  pyproject.toml  requirements.txt  settings.py
bot/: db.py  main.py  settings.py
bot/handlers/: __init__.py  convert.py
db/: backend.py
db/models/: photo.py  user.py
handlers/: __init__.py  convert.py  help.py  start.py
schema/: 001_init.sql
