[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdfbot"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "aiogram",
    "pillow",
    "pydantic",
    "pydantic-settings",
    "redis",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["bot*"]
